# dice-handler

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
dice_roller/: Dockerfile  manage.py  requirements.txt
dice_roller/dice/: models.py
dice_roller/dice/api/: serializers.py  views.py
dice_roller/dice/migrations/: 0001_initial.py
dice_roller/dice_manager/: apps.py  models.py
dice_roller/dice_manager/api/: routes.py  serializers.py  views.py
dice_roller/dice_manager/migrations/: 0001_initial.py  0002_auto_20201210_1721.py
dice_roller/dice_roller/: asgi.py  settings.py  urls.py  wsgi.py
e2e/: Dockerfile  README.md  requirements.txt
e2e/src/: wait-for-sut.sh
e2e/src/e2e/: dice_roller.robot
